kubernetes/service.yml

apiVersion: v1
kind: Service
metadata:
    name: java-demo-service
    namespace: java-devops-demo
spec:
  type: LoadBalancer
  selector:
    app: java-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
