kubernetes/ingress.yaml
apiVersion : v1
kind: Ingress
metadata:
  name: java-demo-ingress
  namespace: java-devops-demo
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  rules:
  - host: java-demo.example.com
    http:
      paths:  
        - path: /
          pathType: Prefix
          backend:
            service:
              name: java-demo-service
              port:
                number: 8080
